modules/015-admission-policy-engine/charts/constraint-templates/tests/automount-service-account-token/test_samples/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: testns
  labels:
    app: nginx
spec:
  automountServiceAccountToken: false
  containers:
    - name: nginx
      image: nginx
